--- a/style.css
+++ b/style.css
@@ -119,3 +119,101 @@ h2 {
     padding:15px 10px;
     overflow:hidden;
 }
+
+#another-grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 18px;
+    margin-bottom: 10vh;
+    padding: 20px 150px;
+}
+
+.grid-item {
+    background: var(--bg-blue);
+    height: 70vh;
+    border-radius: 2px;
+    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.534);
+    position: relative;
+    color: white;
+    z-index: 1;
+    background-position: center;
+    background-size: cover;
+    overflow-y: hidden;
+    
+}
+
+.grid-item h3 {
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-weight: 100;
+    letter-spacing: 6px;
+    text-align: center;
+    margin-bottom: 10%;
+    margin-top: 165%;
+    transition: all 0.3s ease;
+    font-size: 1.5em;
+}
+
+.grid-item p {
+    z-index: 1;
+    text-align: center;
+    pointer-events: none;
+}
+
+.grid-item span::after {
+    position: absolute;
+    content: '';
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    transition: all 0.3s ease;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.grid-item:hover span::after {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.grid-item:hover h3 {
+    margin-top: 70%;
+    
+}
+
+
+
+.grid-item:first-of-type {
+    background-image: url('Images/forest.jpg');
+    top: 10px;
+}
+
+.grid-item:nth-of-type(2) {
+    background-image: url('Images/desert.jpg');
+    top: -10px;
+}
+
+.grid-item:nth-of-type(3) {
+    background-image: url('Images/tundra.jpg');
+    top: 10px;
+}
+
+.grid-item:nth-of-type(4) {
+    background-image: url('Images/beach.jpg');
+    top: -10px;
+}
+
+.button {
+    outline: none;
+    color: white;
+    background: black;
+    border-radius: 0px;
+    border: none;
+    width: 46%;
+    margin-left: 27%;
+    padding: 10px 10px;
+    text-transform: uppercase;
+    margin-top: 5%;
+    cursor: pointer;
+}
