--- a/style.css
+++ b/style.css
@@ -152,12 +152,12 @@ h2 {
     margin-top: 165%;
     transition: all 0.3s ease;
     font-size: 1.5em;
+    text-shadow: 2px 2px 4px black;
 }
 
 .grid-item p {
     z-index: 1;
     text-align: center;
-    pointer-events: none;
 }
 
 .grid-item span::after {
@@ -167,7 +167,7 @@ h2 {
     width: 100%;
     background: rgba(0, 0, 0, 0.5);
     transition: all 0.3s ease;
-    cursor: pointer;
+    
     top: 0;
     left: 0;
     z-index: -1;
